--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/database.yml 
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
